# agio-core

./: MANIFEST.in  README.md  pyproject.toml
agio/: __agio__.yml  __init__.py  __main__.py
agio/apps/: __init__.py  app_config.py  app_hub.py  context_app.py  exceptions.py  launcher.py
agio/apps/base_classes/: base_app_launcher_plugin.py  base_namespaces.py
agio/core/: __agio__.yml  __init__.py  config.py  core_config.py  env_names.py  exceptions.py  init_core.py  main.py  setup_logger.py
agio/core/actions/: __init__.py  action_item.py
agio/core/api/: __init__.py  _utils.py  auth.py  base_client.py  client.py  desk.py  drive.py  package.py  pipe.py  profile.py  track.py  user.py  workspace.py
agio/core/chips/: __init__.py  chips_hub.py
agio/core/cli/: __init__.py  __main__.py  base_command_plugin.py  command_tools.py  setup_commands.py  tools.py  utils.py
agio/core/config/: __init__.py
agio/core/domains/: __init__.py  company.py  domain.py  entity.py  package.py  package_release.py  product_type.py  profile.py  project.py  variant.py  version.py  workspace.py  workspace_revision.py
agio/core/entities/: __init__.py  _mixins.py  base_object.py  company.py  domain.py  entity.py  package.py  package_release.py  product.py  product_type.py  profile.py  project.py  publish_session.py  published_file.py  task.py  variant.py  version.py  workspace.py  workspace_revision.py  workspace_settings.py
agio/core/events/: __init__.py  callback.py  event.py  event_hub.py
agio/core/init/: init_packages.py  init_plugins.py
agio/core/pkg/: package.py  package_repostory.py  resources.py  workspace.py
agio/core/plugins/: base_app_api.py  base_app_launcher_plugin.py  base_application_main_api.py  base_command.py  base_context_args.py  base_dependency_plugin.py  base_plugin.py  base_remote_repository.py  base_service.py  mixins.py  plugin_base.py  plugin_cmd_base.py  plugin_hub.py  service_hub.py  utils.py
agio/core/service/: service_base.py
agio/core/settings/: __init__.py  collector.py  dependency.py  exceptions.py  generic_types.py  local_settings.py  local_settings_manager.py  package_settings.py  schema_generator.py  serializers.py  settings_base_class.py  settings_field.py  settings_hub.py  settings_model.py  validators.py  workspace_settings.py
agio/core/utils/: __init__.py  action_item.py  action_items.py  actions.py  app_context.py  app_dirs.py  (+28 more)
agio/package_settings/: __init__.py  core_local_settings.py  core_workspace_settings.py  local.py  local_layout.yml  local_settings.py  workspace.py  workspace_layout.yml
agio/resources/core/pkg-template-default/: README.md  pyproject.toml
agio/resources/core/pkg-template-default/{{py_name}}/: __agio__.yml
agio/resources/core/pkg-template-default/{{py_name}}/callbacks/: callbacks-dir
agio/resources/core/pkg-template-default/{{py_name}}/package_settings/: local_settings.py  settings-dir  workspace_settings.py
agio/resources/core/pkg-template-default/{{py_name}}/plugins/: plugins-dir
agio/tools/: __init__.py  app_context.py  app_dirs.py  args_helper.py  cache_tools.py  concurrent.py  custom_pipe.py  data_helpers.py  debug.py  enum.py  env_names.py  envs.py  expression_solver.py  extract_variable.py  file_utils.py  git_utils.py  json_serializer.py  launching.py  local_dirs.py  modules.py  network.py  package_template.py  packaging_tools.py  paths.py  process_hub.py  process_utils.py  qt.py  repository_utils.py  setup_logger.py  singleton.py  text_helpers.py  thread_tools.py  venv_helpers.py  workspace_tools.py
docs/: actions.md  agio_meta_file_example.yml  index.md  packages.md  plugins.md
scripts/: agio-install.sh  install-agio-docker.sh  install-agio.ps1  install-agio.sh  uninstall-agio.ps1  uninstall-agio.sh
tests/: test_settings.py
(+208 files in other folders)
