[project]
name = "agio-core"
version = "0.0.1"
description = "Core functionality for agio framework."
authors = [
    { name = "paulwinex", email = "paulwinex@gmail.com" }
]
license = { text = "MIT" }
#license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "click>=8.1.8",
    "psutil>=7.0.0",
    "pydantic>=2.11.4",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
agio = "agio.core.cli:__main__"


# for c-code compilation
#[tool.cibuildwheel]
#build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
#skip = "pp*"  # skip PyPy


# === do not change code below  === #
[build-system]
requires = ["uv", "wheel", "setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
