[project]
name = "agio-core"
version = "0.0.11"
description = "Core functionality for agio pipeline"
authors = [
    { name = "paulwinex", email = "paulwinex@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "click>=8.1.8",
    "diskcache>=5.6.3",
    "mistune>=3.1.3",
    "packaging>=25.0",
    "psutil>=7.0.0",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "unidecode>=1.4.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
agio = "agio.__main__:main"

[build-system]
requires = ["uv", "wheel", "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"agio" = [
    "__agio__.yml",
    "core/api/queries/**",
    "core/api/templates/*",
    "resources/**"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
